# 3DModelViewer

./: .gitignore  CMakeLists.txt
shaders/: fragshader.glsl  grid_lines.fs  grid_lines.vs  vertshader.glsl
src/: ObjParser.cpp  ObjParser.hpp  camera.cpp  camera.hpp  gl_utils.cpp  gl_utils.hpp  glad.c  glad.h  grid_lines.cpp  grid_lines.hpp  main.cpp  model_renderer.cpp  model_renderer.hpp
